eflow-phisym/eflow-phisym-10806144-0.err
  File "/eos/home-p/pbackes/ecalphisym/calibration/eflow_processor.py", line 362
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
